--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -151,30 +151,38 @@
                     <div class="search_room">
                         <form action="/home/search" method="post">
                             <div class="find_roomid">
-                                <input type="text" id="input_roomid" name="roomID" placeholder="Mã phòng">
+                                <input type="text" id="input_roomid" name="roomID" placeholder="Mã phòng" oninput="hideWarningroom()">
                                 <button class="find" type="submit">
                                     <i class="fa-solid fa-magnifying-glass fa-lg"></i>
                                 </button>
                             </div>
                             {{#if full}}
-                            <script>
-                                document.getElementById("team_modal_xep_hang").style.display = "flex";
-                                document.getElementById("Warningroom").style.display = "flex";
-                            </script>
-                            <div class="Warningroom"> 
-                                <i class="fa-solid fa-circle-exclamation" id="error_ex"></i>
-                                <div class="fullroom">{{full}}</div>
-                            </div>
+                                <script>
+                                    document.getElementById("team_modal_xep_hang").style.display = "flex";
+                                    document.getElementById("Warningroom").style.display = "flex";
+                                    function hideWarningroom()
+                                    {
+                                        document.querySelector(".Warningroom").style.display = "none";
+                                    }
+                                </script>
+                                <div class="Warningroom"> 
+                                    <i class="fa-solid fa-circle-exclamation" id="error_ex"></i>
+                                    <div class="fullroom">{{full}}</div>
+                                </div>
                             {{/if}}
                             {{#if Notfound}}
-                            <script>
-                                document.getElementById("team_modal_xep_hang").style.display = "flex";
-                                document.getElementById("Warningroom").style.display = "flex";
-                            </script>
-                            <div class="Warningroom">
-                                <i class="fa-solid fa-circle-exclamation" id="error_ex"></i>
-                                <div class="notfoundroom">{{Notfound}}</div>
-                            </div>
+                                <script>
+                                    document.getElementById("team_modal_xep_hang").style.display = "flex";
+                                    document.querySelector(".Warningroom").style.display = "flex";
+                                    function hideWarningroom()
+                                    {
+                                        document.querySelector(".Warningroom").style.display = "none";
+                                    }
+                                </script>
+                                <div class="Warningroom">
+                                    <i class="fa-solid fa-circle-exclamation" id="error_ex"></i>
+                                    <div class="notfoundroom">{{Notfound}}</div>
+                                </div>
                             {{/if}}
                         </form>
                         
@@ -219,14 +227,9 @@
                     </div>
 
                     <div class="select_rank_mode_button">
-                        <form action="/home/roomcreate/" method="post" id = "create_room"><button type="submit" class="createclick" ><b>Tạo phòng</b></button></form>
-                        <form action="/home/playnow/" method="post">
-                            <button class="playclick" id="play_now">
-                                <b>
-                                    Vào nhanh
-                                </b>
-                            </button>
-                        </form>
+                        {{!-- <form action="/home/roomcreate/" method="post" id = "create_room"><button type="submit" class="createclick" ><b>Tạo phòng</b></button></form> --}}
+                        <button class="createclick" id="Roomcreate"><b>Tạo phòng</b></button>
+                        <button class="playclick" id="play_now"> <b>Vào nhanh </b></button>
                     </div>
                 </div>
 
@@ -240,7 +243,7 @@
 
     </div>
 
-    {{!-- <div class="modal_create_room" id = "team_modal_create_room">
+    <div class="modal_create_room" id="team_modal_create_room">
         <div class="create_room_body">
             <div class="create_room_header">
                 <div class="create_room_return">
@@ -248,19 +251,70 @@
                 </div>
             </div>
 
-            <div class="create_room_content">
+            <form action="/home/roomcreate/" method="post" id="create_room">
                 <div class="create_room_input">
-                    <label for="Name">Tên phòng</label><br>
-                    <input type="text" placeholder="Tên phòng">
+                    <label for="Name">Số vòng chơi:</label><br>
+                    <input type="text" id="round" name="roundNumber" placeholder="Số vòng" oninput="hideExceed()">
                 </div>
 
                 <div class="create_room_create">
-                    <button class="create"><a href="indexsingle">index</a></button>
-                </div>
-            </div>
+                    <button class="create" id="create_play">Play</button>
+                </div>  
+                {{#if exceed}}
+                    <script>
+                        document.getElementById("team_modal_xep_hang").style.display = "flex";
+                        document.getElementById("team_modal_create_room").style.display = "flex";
+                        document.querySelector(".Exceedroom").style.display = "flex";
+                        function hideExceed()
+                        {
+                            document.querySelector(".Exceedroom").style.display = "none";
+                        }
+                    </script>
+                    <div class="Exceedroom"> 
+                        <i class="fa-solid fa-circle-exclamation" id="exceed_ex"></i>
+                        <div class="exceed_value">{{exceed}}</div>
+                    </div>
+                {{/if}} 
+            </form>
         </div>
 
-    </div> --}}
+    </div>
+    <div class="modal_playnow_room" id = "team_modal_playnow_room">
+        <div class="playnow_room_body">
+            <div class="playnow_room_header">
+                <div class="playnow_room_return">
+                    <span class = "return_playnow_room">TRỞ LẠI</span>
+                </div>
+            </div>
+
+            <form action="/home/playnow/" method="post" id="playnow_room">
+                <div class="playnow_room_input">
+                    <label for="Name">Số vòng chơi:</label><br>
+                    <input type="text" id="round1" name="roundNumber1" placeholder="Số vòng" oninput="hideExceed()">
+                </div>
+
+                <div class="playnow_room_create">
+                    <button class="playnow" id="playnow_play">Play</button>
+                </div>  
+                {{#if exceed1}}
+                    <script>
+                        document.getElementById("team_modal_xep_hang").style.display = "flex";
+                        document.getElementById("team_modal_playnow_room").style.display = "flex";
+                        document.querySelector(".Exceedroom").style.display = "flex";
+                        function hideExceed()
+                        {
+                            document.querySelector(".Exceedroom").style.display = "none";
+                        }
+                    </script>
+                    <div class="Exceedroom"> 
+                        <i class="fa-solid fa-circle-exclamation" id="exceed_ex1"></i>
+                        <div class="exceed_value">{{exceed1}}</div>
+                    </div>
+                {{/if}}  
+            </form>
+        </div>
+
+    </div>
     <!-- Leaderboard -->
     <div class="leaderboard" id="ldtest">
         <div class="overlay">
