--- a/backend/src/resources/views/playmulti.hbs
+++ b/backend/src/resources/views/playmulti.hbs
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>King of Melody</title>
-        <link rel="stylesheet" href="../assets/playweb-multi.css">
+        <link rel="stylesheet" href="/assets/playweb-multi.css">
         <script src="https://kit.fontawesome.com/d42216d8d0.js" crossorigin="anonymous"></script> 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" 
         integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -37,7 +37,7 @@
                         </div>
                         <div class="round-info">
                             Round<br>
-                            <h3 id="Round_play">1/10</h3>
+                            <h3 id="Round_play">1/{{round1}}</h3>
                         </div>
                         <div class="time-info">
                             Time<br>
@@ -58,22 +58,45 @@
                             </div>
                         </div>
                         <h2 class="player2-name" id="player2name">Hãy đợi người chơi 2</h2>
+                        <div class="subnav" id = "subnav">
+                            <div class="background">
+                                <div class="chat">HỒ SƠ</div>
+                            </div>
+                            
+                        </div>  
                     </div>
                 </div>
                 
                 <div class="disc">
-                    
-                    <img src="/assets/img/dianhac2.png" class="discimg" id="music_disc" alt="disc">
-                    
-                    <div class="btn">
-                        <div><input type="range" value="0" id="progress"></div>
+                    <div class="button">
+                        <div class="chat_">
+                            <div class="chat_player" id="chat_multi"><i class="fa-solid fa-message"></i></div>
+                        </div>
                         
-                        <div id="progress-control">
-                            <div><i class="fa-solid fa-volume-low" id="decrease-volume"></i></div>
-                            <div><i class="fa-solid fa-pause" id="ctrlIcon"></i></div>
-                            <div><i class="fa-solid fa-volume-high" id="increase-volume"></i></div>
+                        <div class="circle">
+                            <div class="toggle"><i class="fa-solid fa-face-smile"></i></div>
+                            <li style="--i:0" class="like"><a href="#"><i class="fa-solid fa-thumbs-up"></i></a></li>
+                            <li style="--i:1" class="dislike"><a href="#"><i class="fa-solid fa-thumbs-down"></i></a></li>
+                            <li style="--i:2" class="sad"><a href="#"><i class="fa-solid fa-face-sad-cry"></i></a></li>
+                            <li style="--i:3" class="smile"><a href="#"><i class="fa-solid fa-face-laugh-beam"></i></a></li>
+                            <li style="--i:4" class="angry"><a href="#"><i class="fa-solid fa-face-angry"></i></i></a></li>
+                            <li style="--i:5" class="heart"><a href="#"><i class="fa-solid fa-face-grin-hearts"></i></a></li>
                         </div>
                     </div>
+                    
+                    <div class="disc_progress">
+                        <img src="/assets/img/dianhac2.png" class="discimg" id="music_disc" alt="disc">
+                        <div class="btn">
+                            <div><input type="range" value="0" id="progress"></div>
+                            
+                            <div id="progress-control">
+                                <div><i class="fa-solid fa-volume-low" id="decrease-volume"></i></div>
+                                <div><i class="fa-solid fa-pause" id="ctrlIcon"></i></div>
+                                <div><i class="fa-solid fa-volume-high" id="increase-volume"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                    
                     
                 </div>
                 <div class="answer">
@@ -152,13 +175,22 @@
                 </button>
             </div>
         </div>
+        <div class="send-field" style="opacity: 0;">
+            <div class="send-container">
+                <input type="text" name="chat" placeholder="Nhập tin nhắn" maxlength="60" id="chat_play">
+                <i class="fa-solid fa-paper-plane"></i>
+            </div>
+        </div>
+
+        <div class="player2_icon"><i class="fa-solid fa-thumbs-up" id="icon_" style="display: flex; color: #48f1eb;"></i></div>
+
         <input type="hidden" id="songsInput" data-songs="{{songs}}">
         <input type="hidden" id="userid" data-user="{{userid}}">
         <input type="hidden" id="efInput" data-efvolume="{{efVL}}">
         <input type="hidden" id="msInput" data-volume="{{msVL}}">
+        <input type="hidden" id="roundNum" data-round="{{round1}}">
         <script src="/socket.io/socket.io.js"></script>
         <script src="/playmultiplayer.js"></script>
-
 
     </body>
 </html>
