--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -38,13 +38,14 @@
 
 
     <div id="content">
-        <div class="menubtn">
-            <ul>
-                <li id = "cd_thuong">CHẾ ĐỘ THƯỜNG</li>
-                <li id = "cd_xep_hang">MULTIPLAYER</li>
-                <li><a href="#ldtest" >BẢNG XẾP HẠNG</a></li>
-            </ul>
-        </div>
+        <div class="container-btn">
+            <div class="menubtn">
+                <ul>
+                    <li id = "cd_thuong">CHẾ ĐỘ THƯỜNG</li>
+                    <li id = "cd_xep_hang">MULTIPLAYER</li>
+                    <li><a href="#ldtest" >BẢNG XẾP HẠNG</a></li>
+                </ul>
+            </div>
 
             <div class="button">
                 <img src="/assets/img/convitdj.png"  alt="Speaker" class="speaker">
@@ -53,10 +54,10 @@
                         <span class="play-button-label">Play</span>
                     </div>
                 </a>
-                
+
             </div>
         </div>
-        
+
 
         <div id="footer">
             <div class="menu_btn">
@@ -71,11 +72,11 @@
                             <i class="fa-solid fa-book"></i>
                             <span><b>HƯỚNG DẪN</b></span>
                         </a>
-                    </button>   
+                    </button>
             </div>
             <div class="para"><b> A product of team11!</b></div>
         </div>
-        
+
     </div>
 
     
