--- a/backend/src/resources/views/profile.hbs
+++ b/backend/src/resources/views/profile.hbs
@@ -163,7 +163,7 @@
         <div class="modal_update_song" id="modal_update_song">
             <div class="album">Thêm bài hát</div>
             <div class="numofsong">Còn trống: <span id="empty">{{empty}}</span></div>
-            <form id="songForm" method="POST" action="/profile/{{userId}}" enctype="multipart/form-data">
+            <form id="songForm" method="POST" action="/profile" enctype="multipart/form-data">
                 <label for="songName">Tên Bài Hát:</label><br>
                 <input type="text" class="Input" id="songName" name="songName" required><br>
                 <label for="artist">Ca Sĩ:</label><br>
