--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -217,8 +217,8 @@ body{
     flex-direction: column;
     justify-content: center;
     position: relative;
-    padding-left: 6%;
-    width: 40%;
+    padding-left: 10%;
+    width: 43%;
 }
 
 #content .menubtn ul {
@@ -254,7 +254,7 @@ body{
 
 
 #content .button .speaker{
-    width: 100vh;
+    width: 48vw;
     position: relative;
     margin-left: 4%;
 }
@@ -1247,11 +1247,11 @@ table, th, tr{
 
 
 @media only screen and (max-height: 450px) {
-    #content .button .speaker {
+    /* #content .button .speaker {
         width: 90%;
         height: 90%;
         margin-top: -10%;
-    }
+    } */
     #header {
         height: 73px;
     }
