--- a/backend/src/resources/views/profile.hbs
+++ b/backend/src/resources/views/profile.hbs
@@ -33,7 +33,7 @@
                         <div class="nav">
                             <div class = "username" id = "username">
                                 <img src="/assets/img/Avatar_header.jpg" alt="" >
-                                <span id="user_logo">KING_OF_MELODY</span>
+                                <span id="user_logo">{{username}}</span>
                                 <span class="material-symbols-outlined" id="icon_nar">
                                     keyboard_arrow_up
                                 </span>
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                         <div class="space"></div>
-                        <div class="main_label">Multipalyer</div>
+                        <div class="main_label">Multiplayer</div>
                         <div class="main_mask">
                             <div class="mask_item">
                                 <div class="mask_number">0</div>
