--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -535,18 +535,28 @@ body{
     margin: 5px 0 10px;
 }
 
-.modal_thuong .select_normal_mode_play_button .playclick,
-.modal_thuong .select_normal_mode_play_button .resumeclick{
+.modal_thuong .select_normal_mode_play_button .playclick
+{
     display: flex;
     align-items: center;
     height: 100%;
     justify-content: center;
-    margin-top: 2em;
-    
+    border: 0;
+    background-color: rgba(61, 7, 185, .6);
+    background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);
+    padding: 12px 24px;
+    font-size: 1rem;
+    color: aliceblue;
+    box-shadow:  inset 0 0.0625rem 0 hsla(0, 0%, 100%, .2), inset 0 -0.125rem 0 rgba(0, 0, 0, .3);
+    border-radius: 8px;
+    transition-property: padding;
+    transition-duration: 0.5s;
+    text-transform: uppercase;
+    cursor: pointer;  
 }
 
-.modal_thuong .select_normal_mode_play_button .playclick:hover,
-.modal_thuong .select_normal_mode_play_button .resumeclick:hover{
+.modal_thuong .select_normal_mode_play_button .playclick:hover
+{
     padding: 16px 38px;
     transform: scale(1.15);
 }
