--- a/backend/src/assets/playweb.css
+++ b/backend/src/assets/playweb.css
@@ -496,7 +496,7 @@ body {
 
 #end-model {
     background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
-    display: flex;
+    display: none;
     width: 60%;
     height: 75%;
     position: absolute;
@@ -515,7 +515,7 @@ body {
 
 #detail-model {
     background-image: linear-gradient(-225deg, #2CD8D5 0%, #C5C1FF 56%, #FFBAC3 100%);
-    display: flex;
+    display: none;
     width: 60%;
     height: 75%;
     position: absolute;
@@ -681,7 +681,7 @@ body {
         font-size: 30px;
         margin: 3vh auto;
     }
-    .container > .hint > .hintlist-1 > h3 {
+    .container > .hint h3 {
         font-size: 20px;
     }
     .container .play-area .disc img {
@@ -696,5 +696,20 @@ body {
     }
     .container .play-area .disc {
         margin: 5vh;
+    }
+    .song-detail {
+        justify-content:flex-start;
+    }
+    #detail-model {
+        height: 90%;
+    }
+    #end-model {
+        height: 90%;
+    }
+    .btn-model {
+        margin: 1% auto;
+    }
+    .song-detail > .songlist h2 {
+        font-size: 1.5rem;
     }
 }
